rectify model and test
Signed-off-by: Thang PHAM <phamthang37@gmail.com>